--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+    font-family: 'Barlow'; /* Gantilah dengan nama font Anda */
+    src:url('/fonts/BarlowSemiCondensed-Medium.ttf') format('truetype'); /* Pastikan path ini sesuai */
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Poppins'; /* Gantilah dengan nama font Anda */
+    src:url('/resources/fonts/Poppins-Regular.ttf') format('truetype'); /* Pastikan path ini sesuai */
+    font-weight: normal;
+    font-style: normal;
+  }
+
 
 @tailwind base;
 @tailwind components;
